--- a/css-layout/layout02/style02.css
+++ b/css-layout/layout02/style02.css
@@ -7,13 +7,13 @@ html {
   display: flex;
   flex-flow: row wrap;
   justify-content: flex-start;
-  padding: 0;
-  margin: 0;
+  padding: 0px 40px;
+  margin: auto;
   list-style: none;
 }
 
 h1 {
-  margin: 50px 20px 30px;
+  margin: 50px 50px 30px;
   font-size: 40px;
   font-weight: 600;
 }
